--- a/fertilizesop/App.config
+++ b/fertilizesop/App.config
@@ -6,7 +6,7 @@
 
 	<connectionStrings>
 		<add name="MyConnection"
-			 connectionString="server=127.0.0.1;port=3306;user=root;password=;database=fertilizer_pos;"
+			 connectionString="server=127.0.0.1;port=3306;user=root;password=Sanghera@7778;database=fertilizer;"
 			 providerName="MySql.Data.MySqlClient" />
 	</connectionStrings>
 </configuration>
