--- a/fertilizesop/fertilizesop.csproj
+++ b/fertilizesop/fertilizesop.csproj
@@ -139,6 +139,12 @@
     <Compile Include="UI\AddCustomer.Designer.cs">
       <DependentUpon>AddCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Addsupplier.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Addsupplier.Designer.cs">
+      <DependentUpon>Addsupplier.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\CustomerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -168,6 +174,9 @@
     <Compile Include="UI\UIHelper.cs" />
     <EmbeddedResource Include="UI\AddCustomer.resx">
       <DependentUpon>AddCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Addsupplier.resx">
+      <DependentUpon>Addsupplier.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
