--- a/fertilizesop/App.config
+++ b/fertilizesop/App.config
@@ -5,9 +5,7 @@
 	</startup>
 
 	<connectionStrings>
-		<add name="MyConnection"
-			 connectionString="server=127.0.0.1;port=3306;user=root;password=Ahadsaab@263;database=fertilizer;"
-			 providerName="MySql.Data.MySqlClient" />
+		<add name="MyConnection" connectionString="server=127.0.0.1;port=3306;user=root;password=javairiaqasim123456789$$;database=fertilizer;" providerName="MySql.Data.MySqlClient" />
 
 	</connectionStrings>
   <runtime>
@@ -19,6 +17,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.4.0" newVersion="4.1.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
