--- a/fertilizesop/fertilizesop.csproj
+++ b/fertilizesop/fertilizesop.csproj
@@ -12,6 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -74,6 +76,9 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="QuestPDF, Version=2025.7.0.0, Culture=neutral, PublicKeyToken=0f3c2b2315ff52c8, processorArchitecture=MSIL">
+      <HintPath>packages\QuestPDF.2025.7.0\lib\netstandard2.0\QuestPDF.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -125,8 +130,10 @@
     <Compile Include="BL\Bl\Supplierbl.cs" />
     <Compile Include="BL\Models\Customers.cs" />
     <Compile Include="BL\Models\Isupplier.cs" />
+    <Compile Include="BL\Models\Order.cs" />
     <Compile Include="BL\Models\Suppliers.cs" />
     <Compile Include="DL\CustomerDl.cs" />
+    <Compile Include="DL\OrderDAL.cs" />
     <Compile Include="DL\Supplierdl.cs" />
     <Compile Include="Interfaces\BLInterfaces\ICustomerBl.cs" />
     <Compile Include="Interfaces\BLInterfaces\Isupplierbl.cs" />
@@ -159,6 +166,18 @@
     <Compile Include="UI\HomeContentform.Designer.cs">
       <DependentUpon>HomeContentform.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\OrdersMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\OrdersMain.Designer.cs">
+      <DependentUpon>OrdersMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\PlacingOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\PlacingOrder.Designer.cs">
+      <DependentUpon>PlacingOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\supplierform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -188,6 +207,12 @@
     <EmbeddedResource Include="UI\HomeContentform.resx">
       <DependentUpon>HomeContentform.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\OrdersMain.resx">
+      <DependentUpon>OrdersMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\PlacingOrder.resx">
+      <DependentUpon>PlacingOrder.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\supplierform.resx">
       <DependentUpon>supplierform.cs</DependentUpon>
     </EmbeddedResource>
@@ -206,7 +231,12 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\logo.jpg" />
+    <Content Include="Resources\logo for car.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\logo.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Fertilizer Shop Logo Design.png" />
@@ -216,4 +246,11 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="packages\QuestPDF.2025.7.0\build\net4\QuestPDF.targets" Condition="Exists('packages\QuestPDF.2025.7.0\build\net4\QuestPDF.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('packages\QuestPDF.2025.7.0\build\net4\QuestPDF.targets')" Text="$([System.String]::Format('$(ErrorText)', 'packages\QuestPDF.2025.7.0\build\net4\QuestPDF.targets'))" />
+  </Target>
 </Project>
