--- a/fertilizesop/fertilizesop.csproj
+++ b/fertilizesop/fertilizesop.csproj
@@ -126,25 +126,53 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BL\Bl\BatchesBl.cs" />
     <Compile Include="BL\Bl\CustomerBl.cs" />
+    <Compile Include="BL\Bl\ProductsBl.cs" />
     <Compile Include="BL\Bl\Supplierbl.cs" />
+    <Compile Include="BL\Models\BatchDetails.cs" />
+    <Compile Include="BL\Models\Batches.cs" />
     <Compile Include="BL\Models\Customers.cs" />
+    <Compile Include="BL\Models\Ipersons.cs" />
     <Compile Include="BL\Models\Isupplier.cs" />
     <Compile Include="BL\Models\Order.cs" />
+    <Compile Include="BL\Models\persons\Customer.cs" />
+    <Compile Include="BL\Models\persons\Supplier.cs" />
+    <Compile Include="BL\Models\Products.cs" />
     <Compile Include="BL\Models\Suppliers.cs" />
+    <Compile Include="DL\BatchdetailsDl.cs" />
+    <Compile Include="DL\BatchesDl.cs" />
     <Compile Include="DL\CustomerDl.cs" />
+    <Compile Include="DL\custumerdl.cs" />
     <Compile Include="DL\OrderDAL.cs" />
+    <Compile Include="DL\ProductsDl.cs" />
     <Compile Include="DL\Supplierdl.cs" />
+    <Compile Include="Interfaces\BLInterfaces\IBatchesBl.cs" />
     <Compile Include="Interfaces\BLInterfaces\ICustomerBl.cs" />
+    <Compile Include="Interfaces\BLInterfaces\IProductBl.cs" />
     <Compile Include="Interfaces\BLInterfaces\Isupplierbl.cs" />
+    <Compile Include="Interfaces\DLinterfaces\IBatchesDl.cs" />
     <Compile Include="Interfaces\DLinterfaces\ICustomerDl.cs" />
     <Compile Include="DL\DatabaseHelper.cs" />
+    <Compile Include="Interfaces\DLinterfaces\IProductsDl.cs" />
     <Compile Include="Interfaces\DLinterfaces\Isupplierdl.cs" />
     <Compile Include="UI\AddCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\AddCustomer.Designer.cs">
       <DependentUpon>AddCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Addproductform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Addproductform.Designer.cs">
+      <DependentUpon>Addproductform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Addsupplier.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Addsupplier.Designer.cs">
+      <DependentUpon>Addsupplier.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\CustomerForm.cs">
       <SubType>Form</SubType>
@@ -178,6 +206,12 @@
     <Compile Include="UI\PlacingOrder.Designer.cs">
       <DependentUpon>PlacingOrder.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\Productsform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Productsform.Designer.cs">
+      <DependentUpon>Productsform.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\supplierform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -187,6 +221,12 @@
     <Compile Include="UI\UIHelper.cs" />
     <EmbeddedResource Include="UI\AddCustomer.resx">
       <DependentUpon>AddCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Addproductform.resx">
+      <DependentUpon>Addproductform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Addsupplier.resx">
+      <DependentUpon>Addsupplier.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
@@ -212,6 +252,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\PlacingOrder.resx">
       <DependentUpon>PlacingOrder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Productsform.resx">
+      <DependentUpon>Productsform.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\supplierform.resx">
       <DependentUpon>supplierform.cs</DependentUpon>
