--- a/fertilizesop/fertilizesop.csproj
+++ b/fertilizesop/fertilizesop.csproj
@@ -34,6 +34,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Cryptography, Version=2.0.0.0, Culture=neutral, PublicKeyToken=072edcf4a5328938, processorArchitecture=MSIL">
       <HintPath>packages\BouncyCastle.Cryptography.2.5.1\lib\net461\BouncyCastle.Cryptography.dll</HintPath>
@@ -126,6 +129,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BL\Bl\BatchDetailsBl.cs" />
     <Compile Include="BL\Bl\BatchesBl.cs" />
     <Compile Include="BL\Bl\CustomerBl.cs" />
     <Compile Include="BL\Bl\ProductsBl.cs" />
@@ -144,6 +148,8 @@
     <Compile Include="DL\BatchesDl.cs" />
     <Compile Include="DL\CustomerDl.cs" />
     <Compile Include="DL\custumerdl.cs" />
+    <Compile Include="Interfaces\BLInterfaces\IbatchdetailsBl.cs" />
+    <Compile Include="Interfaces\DLinterfaces\IBatchdetailsDl.cs" />
     <Compile Include="DL\OrderDAL.cs" />
     <Compile Include="DL\ProductsDl.cs" />
     <Compile Include="DL\Supplierdl.cs" />
@@ -156,6 +162,18 @@
     <Compile Include="DL\DatabaseHelper.cs" />
     <Compile Include="Interfaces\DLinterfaces\IProductsDl.cs" />
     <Compile Include="Interfaces\DLinterfaces\Isupplierdl.cs" />
+    <Compile Include="UI\Addbatchdetailsform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Addbatchdetailsform.Designer.cs">
+      <DependentUpon>Addbatchdetailsform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Addbatchform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Addbatchform.Designer.cs">
+      <DependentUpon>Addbatchform.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\AddCustomer.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -173,6 +191,18 @@
     </Compile>
     <Compile Include="UI\Addsupplier.Designer.cs">
       <DependentUpon>Addsupplier.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\BatchDetailsform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\BatchDetailsform.Designer.cs">
+      <DependentUpon>BatchDetailsform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Batchform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Batchform.Designer.cs">
+      <DependentUpon>Batchform.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\CustomerForm.cs">
       <SubType>Form</SubType>
@@ -219,6 +249,12 @@
       <DependentUpon>supplierform.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\UIHelper.cs" />
+    <EmbeddedResource Include="UI\Addbatchdetailsform.resx">
+      <DependentUpon>Addbatchdetailsform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Addbatchform.resx">
+      <DependentUpon>Addbatchform.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\AddCustomer.resx">
       <DependentUpon>AddCustomer.cs</DependentUpon>
     </EmbeddedResource>
@@ -227,6 +263,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Addsupplier.resx">
       <DependentUpon>Addsupplier.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\BatchDetailsform.resx">
+      <DependentUpon>BatchDetailsform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Batchform.resx">
+      <DependentUpon>Batchform.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
@@ -259,6 +301,7 @@
     <EmbeddedResource Include="UI\supplierform.resx">
       <DependentUpon>supplierform.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.manifest" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
