--- a/fertilizesop/packages.config
+++ b/fertilizesop/packages.config
@@ -13,6 +13,7 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="9.0.7" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="9.0.7" targetFramework="net472" />
   <package id="MySql.Data" version="9.3.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="QuestPDF" version="2025.7.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="8.0.0" targetFramework="net472" />
