--- a/fertilizesop/fertilizesop.csproj
+++ b/fertilizesop/fertilizesop.csproj
@@ -137,8 +137,12 @@
   <ItemGroup>
     <Compile Include="BL\Bl\BatchDetailsBl.cs" />
     <Compile Include="BL\Bl\BatchesBl.cs" />
+    <Compile Include="BL\Bl\Customerbillbl.cs" />
     <Compile Include="BL\Bl\CustomerBl.cs" />
+    <Compile Include="BL\Models\Customerbill.cs" />
+    <Compile Include="BL\Models\Customerrecord.cs" />
     <Compile Include="BL\Models\Temporarycustomersale.cs" />
+    <Compile Include="DL\Customerbilldl.cs" />
     <Compile Include="Interfaces\BLInterfaces\ISbilldetailsBl.cs" />
     <Compile Include="BL\Bl\SbilldetailsBl.cs" />
     <Compile Include="BL\Models\Spricerecord.cs" />
@@ -228,11 +232,11 @@
     <Compile Include="UI\Batchform.Designer.cs">
       <DependentUpon>Batchform.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Customerbill.cs">
+    <Compile Include="UI\customer_bills.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Customerbill.Designer.cs">
-      <DependentUpon>Customerbill.cs</DependentUpon>
+    <Compile Include="UI\customer_bills.Designer.cs">
+      <DependentUpon>customer_bills.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\CustomerForm.cs">
       <SubType>Form</SubType>
@@ -324,8 +328,8 @@
     <EmbeddedResource Include="UI\Batchform.resx">
       <DependentUpon>Batchform.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Customerbill.resx">
-      <DependentUpon>Customerbill.cs</DependentUpon>
+    <EmbeddedResource Include="UI\customer_bills.resx">
+      <DependentUpon>customer_bills.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
