--- a/fertilizesop/fertilizesop.csproj
+++ b/fertilizesop/fertilizesop.csproj
@@ -138,11 +138,15 @@
     <Compile Include="BL\Bl\BatchDetailsBl.cs" />
     <Compile Include="BL\Bl\BatchesBl.cs" />
     <Compile Include="BL\Bl\CustomerBl.cs" />
+    <Compile Include="BL\Bl\TransactionBL.cs" />
     <Compile Include="BL\Models\Temporarycustomersale.cs" />
+    <Compile Include="BL\Models\Transaction.cs" />
+    <Compile Include="DL\TransactionDAL.cs" />
     <Compile Include="Interfaces\BLInterfaces\ISbilldetailsBl.cs" />
     <Compile Include="BL\Bl\SbilldetailsBl.cs" />
     <Compile Include="BL\Models\Spricerecord.cs" />
     <Compile Include="BL\Models\Supplierpayment.cs" />
+    <Compile Include="Interfaces\BLInterfaces\ItransactionBL.cs" />
     <Compile Include="Interfaces\DLinterfaces\ISbilldetailsDl.cs" />
     <Compile Include="DL\SbilldetailsDl.cs" />
     <Compile Include="Interfaces\BLInterfaces\ISupplierBillBl.cs" />
@@ -186,6 +190,7 @@
     <Compile Include="Interfaces\DLinterfaces\IOrder.cs" />
     <Compile Include="Interfaces\DLinterfaces\IProductsDl.cs" />
     <Compile Include="Interfaces\DLinterfaces\Isupplierdl.cs" />
+    <Compile Include="Interfaces\DLinterfaces\ItransactionDL.cs" />
     <Compile Include="UI\Addbatchdetailsform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -215,6 +220,12 @@
     </Compile>
     <Compile Include="UI\Addsupplier.Designer.cs">
       <DependentUpon>Addsupplier.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\AddTransaction.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\AddTransaction.Designer.cs">
+      <DependentUpon>AddTransaction.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\BatchDetailsform.cs">
       <SubType>Form</SubType>
@@ -296,6 +307,12 @@
     <Compile Include="UI\supplierform.Designer.cs">
       <DependentUpon>supplierform.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\transactionView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\transactionView.Designer.cs">
+      <DependentUpon>transactionView.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\UIHelper.cs" />
     <EmbeddedResource Include="UI\Addbatchdetailsform.resx">
       <DependentUpon>Addbatchdetailsform.cs</DependentUpon>
@@ -311,6 +328,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Addsupplier.resx">
       <DependentUpon>Addsupplier.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\AddTransaction.resx">
+      <DependentUpon>AddTransaction.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\BatchDetailsform.resx">
       <DependentUpon>BatchDetailsform.cs</DependentUpon>
@@ -360,6 +380,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\supplierform.resx">
       <DependentUpon>supplierform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\transactionView.resx">
+      <DependentUpon>transactionView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="packages.config" />
