--- a/fertilizesop/fertilizesop.csproj
+++ b/fertilizesop/fertilizesop.csproj
@@ -115,6 +115,7 @@
       <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System.Transactions" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -134,13 +135,28 @@
   <ItemGroup>
     <Compile Include="BL\Bl\BatchDetailsBl.cs" />
     <Compile Include="BL\Bl\BatchesBl.cs" />
+    <Compile Include="BL\Bl\BillingRecordsOverviewBL.cs" />
+    <Compile Include="BL\Bl\Customerbillbl.cs" />
+    <Compile Include="BL\Bl\Customerbilldetailbl.cs" />
+    <Compile Include="BL\Bl\CustomerBill_SpecificProductsBL.cs" />
     <Compile Include="BL\Bl\CustomerBl.cs" />
+    <Compile Include="BL\Bl\dashboardBl.cs" />
+    <Compile Include="BL\Models\Customerbill.cs" />
+    <Compile Include="BL\Models\Customerrecord.cs" />
+    <Compile Include="DL\BillingRecordsOverviewDL.cs" />
+    <Compile Include="DL\Customerbilldetaildl.cs" />
+    <Compile Include="DL\Customerbilldl.cs" />
+    <Compile Include="DL\CustomerBill_SpecificProductsDL.cs" />
+    <Compile Include="Interfaces\BLInterfaces\IInventorylogBl.cs" />
+    <Compile Include="BL\Bl\InventorylogBl.cs" />
+    <Compile Include="Interfaces\DLinterfaces\IdashboardBl.cs" />
     <Compile Include="BL\Bl\TransactionBL.cs" />
     <Compile Include="BL\Models\Dashboard.cs" />
     <Compile Include="BL\Models\inventorylog.cs" />
     <Compile Include="BL\Models\Temporarycustomersale.cs" />
     <Compile Include="BL\Models\Transaction.cs" />
     <Compile Include="DL\DashboardDL.cs" />
+    <Compile Include="Interfaces\DLinterfaces\IDashboardDL.cs" />
     <Compile Include="DL\TransactionDAL.cs" />
     <Compile Include="Interfaces\DLinterfaces\IInventorylogDl.cs" />
     <Compile Include="DL\InventorylogDl.cs" />
@@ -239,6 +255,12 @@
     <Compile Include="UI\Batchform.Designer.cs">
       <DependentUpon>Batchform.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\CustomerBill_SpecificProducts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\CustomerBill_SpecificProducts.Designer.cs">
+      <DependentUpon>CustomerBill_SpecificProducts.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\CustomerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -250,6 +272,12 @@
     </Compile>
     <Compile Include="UI\Customersale.Designer.cs">
       <DependentUpon>Customersale.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\customer_bills.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\customer_bills.Designer.cs">
+      <DependentUpon>customer_bills.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\dashboardform.cs">
       <SubType>Form</SubType>
@@ -264,6 +292,12 @@
     </Compile>
     <Compile Include="UI\HomeContentform.Designer.cs">
       <DependentUpon>HomeContentform.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Inventorylogform.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Inventorylogform.Designer.cs">
+      <DependentUpon>Inventorylogform.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\OrdersMain.cs">
       <SubType>Form</SubType>
@@ -338,11 +372,17 @@
     <EmbeddedResource Include="UI\Batchform.resx">
       <DependentUpon>Batchform.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\CustomerBill_SpecificProducts.resx">
+      <DependentUpon>CustomerBill_SpecificProducts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\CustomerForm.resx">
       <DependentUpon>CustomerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Customersale.resx">
       <DependentUpon>Customersale.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\customer_bills.resx">
+      <DependentUpon>customer_bills.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\dashboardform.resx">
       <DependentUpon>dashboardform.cs</DependentUpon>
@@ -359,6 +399,9 @@
     </Compile>
     <EmbeddedResource Include="UI\HomeContentform.resx">
       <DependentUpon>HomeContentform.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Inventorylogform.resx">
+      <DependentUpon>Inventorylogform.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\OrdersMain.resx">
       <DependentUpon>OrdersMain.cs</DependentUpon>
