--- a/fertilizesop/fertilizesop.csproj
+++ b/fertilizesop/fertilizesop.csproj
@@ -133,6 +133,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BL\Bl\BankBl.cs" />
     <Compile Include="BL\Bl\BatchDetailsBl.cs" />
     <Compile Include="BL\Bl\BatchesBl.cs" />
     <Compile Include="BL\Bl\BillingRecordsOverviewBL.cs" />
@@ -141,6 +142,11 @@
     <Compile Include="BL\Bl\CustomerBill_SpecificProductsBL.cs" />
     <Compile Include="BL\Bl\CustomerBl.cs" />
     <Compile Include="BL\Bl\dashboardBl.cs" />
+    <Compile Include="BL\Bl\IBankBl.cs" />
+    <Compile Include="BL\Models\Bank.cs" />
+    <Compile Include="DL\BankDal.cs" />
+    <Compile Include="DL\ITransactionDAL.cs" />
+    <Compile Include="Interfaces\DLinterfaces\IBankDAL.cs" />
     <Compile Include="Interfaces\BLInterfaces\IReturnsBl.cs" />
     <Compile Include="BL\Bl\ReturnsBl.cs" />
     <Compile Include="BL\Models\Customerbill.cs" />
@@ -252,11 +258,11 @@
     <Compile Include="UI\Addsupplier.Designer.cs">
       <DependentUpon>Addsupplier.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\AddTransaction.cs">
+    <Compile Include="UI\bankform.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\AddTransaction.Designer.cs">
-      <DependentUpon>AddTransaction.cs</DependentUpon>
+    <Compile Include="UI\bankform.Designer.cs">
+      <DependentUpon>bankform.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\BatchDetailsform.cs">
       <SubType>Form</SubType>
@@ -368,12 +374,6 @@
     <Compile Include="UI\supplierform.Designer.cs">
       <DependentUpon>supplierform.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\transactionView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UI\transactionView.Designer.cs">
-      <DependentUpon>transactionView.cs</DependentUpon>
-    </Compile>
     <Compile Include="UI\UIHelper.cs" />
     <EmbeddedResource Include="UI\Addbatchdetailsform.resx">
       <DependentUpon>Addbatchdetailsform.cs</DependentUpon>
@@ -393,8 +393,8 @@
     <EmbeddedResource Include="UI\Addsupplier.resx">
       <DependentUpon>Addsupplier.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\AddTransaction.resx">
-      <DependentUpon>AddTransaction.cs</DependentUpon>
+    <EmbeddedResource Include="UI\bankform.resx">
+      <DependentUpon>bankform.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\BatchDetailsform.resx">
       <DependentUpon>BatchDetailsform.cs</DependentUpon>
@@ -459,9 +459,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\supplierform.resx">
       <DependentUpon>supplierform.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UI\transactionView.resx">
-      <DependentUpon>transactionView.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.manifest" />
     <None Include="packages.config" />
