--- a/fertilizesop/fertilizesop.csproj
+++ b/fertilizesop/fertilizesop.csproj
@@ -141,12 +141,14 @@
     <Compile Include="BL\Bl\CustomerBill_SpecificProductsBL.cs" />
     <Compile Include="BL\Bl\CustomerBl.cs" />
     <Compile Include="BL\Bl\dashboardBl.cs" />
+    <Compile Include="BL\Bl\FinanceReportBL.cs" />
     <Compile Include="BL\Models\Customerbill.cs" />
     <Compile Include="BL\Models\Customerrecord.cs" />
     <Compile Include="DL\BillingRecordsOverviewDL.cs" />
     <Compile Include="DL\Customerbilldetaildl.cs" />
     <Compile Include="DL\Customerbilldl.cs" />
     <Compile Include="DL\CustomerBill_SpecificProductsDL.cs" />
+    <Compile Include="DL\FinanceReportDAL.cs" />
     <Compile Include="Interfaces\BLInterfaces\IInventorylogBl.cs" />
     <Compile Include="BL\Bl\InventorylogBl.cs" />
     <Compile Include="Interfaces\BLInterfaces\ItransactionBL.cs" />
@@ -289,6 +291,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UI\FinanceReportForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\FinanceReportForm.Designer.cs">
+      <DependentUpon>FinanceReportForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\HomeContentform.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -399,6 +407,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UI\FinanceReportForm.resx">
+      <DependentUpon>FinanceReportForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\HomeContentform.resx">
       <DependentUpon>HomeContentform.cs</DependentUpon>
     </EmbeddedResource>
